# langchain-course

./: .gitignore  main.py  main_classic_compose_parser.py  pyproject.toml
secion3/: main_classic.py
section4/: main.py  main_classic_compose_parser.py
section5/: main.py  main2.py
section6/: main1.py  main2.py
section7/: ingestion.py  main.py  mongodb.txt  retrieval.py
section8/: core.py  ingestion.py  main.py
summary/: 01_react_manual_lcel.py  02_react_manual_loop.py  03_react_agent_executor.py  05_tool_calling_executor.py  06_latest_create_agent.py  callbacks.py  main2.py  main4.py  main5.py  main6.py  main7.py  models.py  tools.py
